/**
 * @author bruel
 *
 */
public class NePasVoler implements ComportementVol {

	@Override
	public void voler() {
		System.out.println("Je ne vole pas!");
	}

}
