@startuml

title __SRC's Class Diagram__\n


    abstract class Canard {
        + Canard()
        + afficher()
        + cancaner()
        + nager()
        + voler()
    }

  


    class CanardEnPlastique {
        + CanardEnPlastique()
        + afficher()
    }

  

    class CanardMuet {
        + cancaner()
    }

  

    class Cancan {
        + cancaner()
    }

  

    class Coincoin {
        + cancaner()
    }

  

    class Colvert {
        + Colvert()
        + afficher()
    }

  

    interface ComportementCancan {
        {abstract} + cancaner()
    }

  

    interface ComportementVol {
        {abstract} + voler()
    }

  

    class NePasVoler {
        + voler()
    }

  

    class SuperCanard {
        {static} + main()
    }

  

    class SuperCanardTest {
        {static} ~ bilanAssertions : int
        ~ clavierProgrammeATester : BufferedWriter
        ~ ecranProgrammeATester : BufferedReader
        ~ executionProgrammeATester : Process
        ~ finDeLigne : String
        {static} ~ programmeATester : String
        {static} ~ totalAssertions : int
        {static} + main()
        + test_ligne1()
        + test_ligne2()
        + test_ligne3()
        + test_ligne4()
        # setUp()
    }

  


    class SuperCanardTest2 {
        - oldStream : PrintStream
        - outContent : ByteArrayOutputStream
        + cleanUpStreams()
        + setUpStreams()
        + testComportementCanardEnPlastique()
        + testComportementColvert()
        - readLine()
    }

  

    class VolerAvecDesAlies {
        + voler()
    }

  

  Canard .up.|> ComportementCancan
  Canard .up.|> ComportementVol
  Canard o-- ComportementCancan : comportementCancan
  Canard o-- ComportementVol : comportementVol
  CanardEnPlastique -up-|> Canard
  CanardMuet .up.|> ComportementCancan
  Cancan .up.|> ComportementCancan
  Coincoin .up.|> ComportementCancan
  Colvert -up-|> Canard
  NePasVoler .up.|> ComportementVol
  SuperCanardTest -up-|> junit.framework.TestCase
  VolerAvecDesAlies .up.|> ComportementVol


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
